force-app/main/default/objects/Booking__c/fields/Final_NOC_Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_NOC_Uploaded_Date__c</fullName>
    <label>Final NOC Uploaded Date</label>
    <type>Date</type>
</CustomField>