force-app/main/default/objects/Booking__c/fields/Floor_Rise_Amount__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rise_Amount__c</fullName>
    <label>Floor Rise Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>