force-app/main/default/objects/Booking__c/fields/Franking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Franking_Amount__c</fullName>
    <formula>(Agreement_Value__c*0.5)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Franking Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>