force-app/main/default/objects/Booking__c/fields/Generator_Per_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Generator_Per_Sq_Ft__c</fullName>
    <label>Generator Per Sq.Ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>