force-app/main/default/objects/Booking__c/fields/GRAND_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>GRAND_TOTAL__c</fullName>
    <formula>Quote__r.GRAND_TOTAL__c /*Total_Cost_of_the_Flat__c + GST_5__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not in Use</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>