force-app/main/default/objects/Booking__c/fields/Grand_Total_Before_GST__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Before_GST__c</fullName>
    <label>Grand_Total_Before_GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>