force-app/main/default/objects/Booking__c/fields/GST_Percent__c.field-meta.xml
<CustomField>
    <fullName>GST_Percent__c</fullName>
    <label>GST Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>