force-app/main/default/objects/Booking__c/fields/Guest_Bedroom_Key_No__c.field-meta.xml
<CustomField>
    <fullName>Guest_Bedroom_Key_No__c</fullName>
    <label>Guest Bedroom Key No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>