force-app/main/default/objects/Booking__c/fields/Holding_Charges_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Holding_Charges_Applicable__c</fullName>
    <label>Holding Charges Applicable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>