force-app/main/default/objects/Booking__c/fields/Is_Cancellation_Requested_by_Executive__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancellation_Requested_by_Executive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cancellation Requested by Executive</label>
    <type>Checkbox</type>
</CustomField>