force-app/main/default/objects/Booking__c/fields/Is_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cancellation Requested</label>
    <type>Checkbox</type>
</CustomField>