force-app/main/default/objects/Booking__c/fields/Is_open_by_Admin__c.field-meta.xml
<CustomField>
    <fullName>Is_open_by_Admin__c</fullName>
    <formula>$Profile.Name == &apos;System Administrator&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is open by Admin</label>
    <type>Checkbox</type>
</CustomField>