force-app/main/default/objects/Booking__c/fields/Is_Opened_By_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Opened_By_Owner__c</fullName>
    <formula>OwnerId ==  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Opened By Owner</label>
    <type>Checkbox</type>
</CustomField>