force-app/main/default/objects/Booking__c/fields/Key_Handover_Letter_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Key_Handover_Letter_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Handover Letter Uploaded</label>
    <type>Checkbox</type>
</CustomField>