force-app/main/default/objects/Booking__c/fields/Key_Handover_Letter_Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Key_Handover_Letter_Uploaded_Date__c</fullName>
    <label>Key Handover Letter Uploaded Date</label>
    <type>Date</type>
</CustomField>