force-app/main/default/objects/Booking__c/fields/Khata_Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Khata_Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Khata Document Uploaded</label>
    <type>Checkbox</type>
</CustomField>