force-app/main/default/objects/Booking__c/fields/Land_Per_Sq_ft_Charge__c.field-meta.xml
<CustomField>
    <fullName>Land_Per_Sq_ft_Charge__c</fullName>
    <label>Land Per Sq.ft. Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>