force-app/main/default/objects/Booking__c/fields/Land_Rate_Per_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Land_Rate_Per_Sqft__c</fullName>
    <formula>Quote__r.Land_Rate_Per_Sqft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Land Rate Per Sq.ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>