force-app/main/default/objects/Booking__c/fields/Legal_Charge__c.field-meta.xml
<CustomField>
    <fullName>Legal_Charge__c</fullName>
    <label>Legal Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>