force-app/main/default/objects/Booking__c/fields/Loan_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Approved_Date__c</fullName>
    <label>Loan Approved Date</label>
    <type>Date</type>
</CustomField>