force-app/main/default/objects/Booking__c/fields/Loan_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Loan_Percentage__c</fullName>
    <label>Loan Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>