force-app/main/default/objects/Booking__c/fields/Main_Door__c.field-meta.xml
<CustomField>
    <fullName>Main_Door__c</fullName>
    <label>Main Door &amp; Sensor Key No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>