force-app/main/default/objects/Booking__c/fields/Main_Door_Key_No__c.field-meta.xml
<CustomField>
    <fullName>Main_Door_Key_No__c</fullName>
    <label>Main Door Key No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>