force-app/main/default/objects/Booking__c/fields/Maintenance_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Completed_Date__c</fullName>
    <label>Maintenance Completed Date</label>
    <type>Date</type>
</CustomField>