force-app/main/default/objects/Booking__c/fields/Management_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Management_Approval_Status__c</fullName>
    <formula>TEXT(Sub_Stages__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Management Approval Status</label>
    <type>Text</type>
</CustomField>