force-app/main/default/objects/Booking__c/fields/Move_to_Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>Move_to_Next_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Move to Next Stage</label>
    <type>Checkbox</type>
</CustomField>