force-app/main/default/objects/Booking__c/fields/Need_Additional_Car_Parking__c.field-meta.xml
<CustomField>
    <fullName>Need_Additional_Car_Parking__c</fullName>
    <formula>TEXT(Quote__r.Need_Additional_Car_Parking__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Need Additional Car Parking?</label>
    <type>Text</type>
</CustomField>