force-app/main/default/objects/Booking__c/fields/Notes_and_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_and_Comments__c</fullName>
    <label>Notes and Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>