force-app/main/default/objects/Booking__c/fields/Open_Inspections__c.field-meta.xml
<CustomField>
    <fullName>Open_Inspections__c</fullName>
    <label>Open Inspections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>