force-app/main/default/objects/Booking__c/fields/Open_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Open_Tickets__c</fullName>
    <label>Open Tickets</label>
    <summaryForeignKey>Ticket__c.Booking__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>