force-app/main/default/objects/Booking__c/fields/Owner_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Owner_Phone_Number__c</fullName>
    <formula>Owner:User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Phone Number</label>
    <type>Text</type>
</CustomField>