force-app/main/default/objects/Booking__c/fields/Panchayati_License_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Panchayati_License_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Panchayati License Uploaded</label>
    <type>Checkbox</type>
</CustomField>