force-app/main/default/objects/Booking__c/fields/Passed_Hour_after_Booked_Stage__c.field-meta.xml
<CustomField>
    <fullName>Passed_Hour_after_Booked_Stage__c</fullName>
    <formula>( NOW() - Booking_Moved_To_Booked_Stage_Time__c ) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hrs From Intimal CRM Executive Assign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>