force-app/main/default/objects/Booking__c/fields/Payment_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Name__c</fullName>
    <formula>&apos;TEST&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Plan Name</label>
    <type>Text</type>
</CustomField>