force-app/main/default/objects/Booking__c/fields/Payment_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Payment_Remarks__c</fullName>
    <label>Payment Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>