force-app/main/default/objects/Booking__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <formula>TEXT(Plot__r.Block_Lookup__r.Phase__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase</label>
    <type>Text</type>
</CustomField>