force-app/main/default/objects/Booking__c/fields/Planning_to_take_a_home_loan__c.field-meta.xml
<CustomField>
    <fullName>Planning_to_take_a_home_loan__c</fullName>
    <label>Planning to take a home loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>