force-app/main/default/objects/Booking__c/fields/Plot_Land_Area__c.field-meta.xml
<CustomField>
    <fullName>Plot_Land_Area__c</fullName>
    <label>Plot Land Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>