force-app/main/default/objects/Booking__c/fields/Plot_Land_Cost__c.field-meta.xml
<CustomField>
    <fullName>Plot_Land_Cost__c</fullName>
    <label>Plot Land Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>