force-app/main/default/objects/Booking__c/fields/Possession_Certificate_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Possession_Certificate_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possession Certificate Uploaded</label>
    <type>Checkbox</type>
</CustomField>