force-app/main/default/objects/Booking__c/fields/Posting_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Posting_in_Date__c</fullName>
    <label>Expected Clearance Date</label>
    <type>Date</type>
</CustomField>