force-app/main/default/objects/Booking__c/fields/Power_of_Attorney_DOB__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney_DOB__c</fullName>
    <label>Power of Attorney DOB</label>
    <type>Date</type>
</CustomField>