force-app/main/default/objects/Booking__c/fields/Project1__c.field-meta.xml
<CustomField>
    <fullName>Project1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Bookings (Project)</relationshipLabel>
    <relationshipName>Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>