force-app/main/default/objects/Booking__c/fields/Project_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Brand_Name__c</fullName>
    <formula>UPPER(
    IF(
        CONTAINS(Project1__r.Name, &apos; &apos;),
        MID(Project1__r.Name, FIND(&quot; &quot;, Project1__r.Name) + 1, LEN(Project1__r.Name)),
        Project1__r.Name
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project_Brand_Name</label>
    <type>Text</type>
</CustomField>