force-app/main/default/objects/Booking__c/fields/Proof_of_Address_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Address_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proof of Address Uploaded</label>
    <type>Checkbox</type>
</CustomField>