force-app/main/default/objects/Booking__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <formula>IF(
    TEXT(Project_Type__c) = &quot;Apartments&quot;, &apos;Apartment&apos;,
    IF(
        TEXT(Project_Type__c) = &quot;Villas&quot;, &apos;Villa&apos;,
        IF(
            TEXT(Project_Type__c) = &quot;Row House&quot;, &apos;Row House&apos;,
            NULL
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Type</label>
    <type>Text</type>
</CustomField>