force-app/main/default/objects/Booking__c/fields/Push_to_CRM_Comments__c.field-meta.xml
<CustomField>
    <fullName>Push_to_CRM_Comments__c</fullName>
    <label>Push to CRM Comments</label>
    <type>TextArea</type>
</CustomField>