force-app/main/default/objects/Booking__c/fields/Reason_For_Swapping_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Swapping_Applicant__c</fullName>
    <label>Reason For Swapping Applicant</label>
    <type>TextArea</type>
</CustomField>