force-app/main/default/objects/Booking__c/fields/Received_Amount_Crores__c.field-meta.xml
<CustomField>
    <fullName>Received_Amount_Crores__c</fullName>
    <formula>Total_received_Amount__c / 10000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Amount (Crores)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>