force-app/main/default/objects/Booking__c/fields/Received_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Received_Interest_Amount__c</fullName>
    <label>Received Interest Amount</label>
    <summarizedField>Receipt__c.Received_Interest_Amount__c</summarizedField>
    <summaryForeignKey>Receipt__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>