force-app/main/default/objects/Booking__c/fields/Refund_Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>Refund_Expected_Date__c</fullName>
    <label>Refund Expected Date</label>
    <type>Date</type>
</CustomField>